fix: ques pagination alignment

--- a/src/components/Questions/Ques.css
+++ b/src/components/Questions/Ques.css
@@ -4,8 +4,6 @@
   font-size: 16px;
   width: 747px;
   color: rgba(187, 200, 200, 1);
-  padding-top: 75px;
-  padding-bottom: 70px;
 }
 .bg-color {
   background-color: rgba(29, 33, 38, 1);
